# wc

./: Cargo.toml  README.md
src/: args.rs  error.rs  lib.rs  main.rs  word_count.rs  word_countable.rs
src/args/: unit_tests.rs
src/consts/msg/: en_us.rs
src/word_count/: unit_tests.rs
